# ditto

./: Cargo.toml  LICENSE  README.md  manjaro-kde.torrent
src/: lib.rs  main.rs  metainfo.rs  torrent.rs
src/helpers/: deserialize.rs  mod.rs
