[package]
name = "ditto"
version = "0.1.0"
authors = ["Joe Krywicki <joe.krywicki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
sha-1 = "0.9"
